<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayoutCheckout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#ffffff"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="10">

            <EditText
                android:id="@+id/amt"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/pay1"
                android:autofillHints="0.00"
                android:inputType="numberDecimal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/amt"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/linearLayoutButtonPlaceOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_weight="1"
        android:background="#FFFFFF"
        android:orientation="vertical">

        <Button
            android:id="@+id/pays"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:background="#007200"
            android:text="@string/pay"
            android:textColor="#ffffff"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>